# imu-attitude-estimation_ws

./: .gitignore  drone.md  gps.md  readme.md
docs/: imu_attitude_estimation_plan.md
src/imu_attitude_estimation/: README.md  package.xml  setup.cfg  setup.py
src/imu_attitude_estimation/config/: imu_params.yaml
src/imu_attitude_estimation/imu_attitude_estimation/: __init__.py  algorithm_runner.py  benchmark_driver.py  estimator_base.py  estimators.py  live_plot_node.py  math_utils.py  metrics_node.py  report_generator.py  ros_utils.py  run_all_benchmarks.py  synthetic_benchmark.py  trajectory.py
src/imu_attitude_estimation/launch/: benchmark.launch.py  fast_rotation.launch.py  static_dynamic.launch.py  static_zero_drift.launch.py  trajectory_tracking.launch.py
src/imu_attitude_estimation/test/: test_estimators.py  test_math_utils.py
src/imu_attitude_estimation/worlds/: imu_benchmark.sdf
src/imu_attitude_estimation_gtsam/: CMakeLists.txt  package.xml
src/imu_attitude_estimation_gtsam/src/: gtsam_fgo_node.cpp
